# ------------------------------------------------------
# THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
# ------------------------------------------------------

"""Current Status for appointment"""
enum AppointMentStatus {
  ACCEPTED
  CANCELED
  COMPLETED
  PENDING
}

type Appointment {
  about: String!

  """Identifies the date and time when the object was created."""
  createdAt: DateTime!
  endDate: String!
  guestAvailability: Availability!
  guestAvailabilityId: Int!
  guestId: Int!
  id: ID!
  startDate: String!
  status: AppointMentStatus!

  """Identifies the date and time when the object was last updated."""
  updatedAt: DateTime!
  user: User!
  userId: Int!
}

type Auth {
  """JWT access token"""
  accessToken: JWT!

  """JWT refresh token"""
  refreshToken: JWT!
  user: User!
}

type Availability {
  active: Boolean!
  appointments: [Appointment!]!
  available: Boolean!

  """Identifies the date and time when the object was created."""
  createdAt: DateTime!
  endTimeDate: DateTime!
  id: ID!
  startTimeDate: DateTime!

  """Identifies the date and time when the object was last updated."""
  updatedAt: DateTime!
  user: User!
  userId: Int!
}

input ChangePasswordInput {
  newPassword: String!
  oldPassword: String!
}

input CreateAppointmentInput {
  about: String
  endDate: String
  guestAvailabilityId: Int
  guestId: Int
  startDate: String
}

input CreateAttendeeInput {
  eventId: Int!
  userId: Int!
}

input CreateAvailabilityInput {
  endTimeDate: DateTime
  startTimeDate: DateTime
}

input CreateEventInput {
  completed: Boolean = false
  endDateTime: DateTime!
  meetingLink: String!
  purpose: String!
  startDateTime: DateTime!
}

input CreateMessageInput {
  content: String!
  fromUserId: Int!
  threadId: Int!
  toUserId: Int!
}

"""
A date-time string at UTC, such as 2019-12-03T09:54:33Z, compliant with the date-time format.
"""
scalar DateTime

type Event {
  attendees: [EventAttendee!]!
  completed: Boolean!

  """Identifies the date and time when the object was created."""
  createdAt: DateTime!
  endDateTime: DateTime!
  host: User!
  hostId: Int!
  id: ID!
  meetingLink: String!
  purpose: String!
  startDateTime: DateTime!

  """Identifies the date and time when the object was last updated."""
  updatedAt: DateTime!
  user: User!
}

type EventAttendee {
  """Identifies the date and time when the object was created."""
  createdAt: DateTime!
  event: Event!
  eventId: Int!
  id: ID!

  """Identifies the date and time when the object was last updated."""
  updatedAt: DateTime!
  user: User!
  userId: Int!
}

"""
A field whose value is a JSON Web Token (JWT): https://jwt.io/introduction.
"""
scalar JWT

input LoginInput {
  email: String!
  password: String!
}

type Message {
  content: String!

  """Identifies the date and time when the object was created."""
  createdAt: DateTime!
  fromUserId: String!
  id: ID!
  thread: MessageThread!
  threadId: Int!
  toUserId: String!

  """Identifies the date and time when the object was last updated."""
  updatedAt: DateTime!
}

type MessageThread {
  """Identifies the date and time when the object was created."""
  createdAt: DateTime!
  creator: User!
  creatorId: Int!
  guestId: String!
  id: ID!
  messages: [Message!]!

  """Identifies the date and time when the object was last updated."""
  updatedAt: DateTime!
}

type Mutation {
  changeAppointmentStatus(id: Int!, status: String!): Appointment!
  changePassword(data: ChangePasswordInput!): User!
  createAppointment(data: CreateAppointmentInput!): Appointment!
  createAvailability(data: CreateAvailabilityInput!): Availability!
  createEvent(data: CreateEventInput!): Event!
  createEventAttendee(data: CreateAttendeeInput!): EventAttendee!
  createMessage(data: CreateMessageInput!): Message!
  deleteAppointment(ids: [Int!]!): Appointment!
  deleteAttendee(ids: [Int!]!): EventAttendee!
  login(data: LoginInput!): Auth!
  refreshToken(token: JWT!): Token!
  signup(data: SignupInput!): Auth!
  updateAppointment(data: UpdateAppointmentInput!, id: Int!): Appointment!
  updateAvailability(data: UpdateAvailabilityInput!, id: Int!): Availability!
  updateEvent(data: UpdateEvent!, id: Int!): Event!
  updateUser(data: UpdateUserInput!): User!
}

type Post {
  author: User!
  content: String!

  """Identifies the date and time when the object was created."""
  createdAt: DateTime!
  id: ID!
  published: Boolean!
  title: String!

  """Identifies the date and time when the object was last updated."""
  updatedAt: DateTime!
}

type Query {
  appointment(id: Int!): Appointment!
  attendee(id: Int!): EventAttendee!
  attendees: [EventAttendee!]!
  availabilities: [Availability!]!
  availability(id: Int!): Availability!
  event(id: Int!): Event!
  events: [Event!]!
  helloWorld: String!
  me: User!
  message(id: Int!): Message!
  messages(thread: Int!): [Message!]!
}

"""User role can either be ADMIN, COACH or FELLOW"""
enum Role {
  ADMIN
  COACH
  FELLOW
}

input SignupInput {
  email: String!
  firstname: String
  lastname: String
  password: String!
}

type Token {
  """JWT access token"""
  accessToken: JWT!

  """JWT refresh token"""
  refreshToken: JWT!
}

input UpdateAppointmentInput {
  about: String
  endDate: String
  guestAvailabilityId: Int
  startDate: String
}

input UpdateAvailabilityInput {
  active: Boolean
  available: Boolean
  endTimeDate: DateTime
  startTimeDate: DateTime
}

input UpdateEvent {
  completed: Boolean = false
  endDateTime: DateTime!
  meetingLink: String!
  purpose: String!
  startDateTime: DateTime!
}

input UpdateUserInput {
  age: String
  attentionStatement: String
  bio: String
  country: String
  firstname: String
  issueCategory: String
  issueType: String
  lastname: String
  phoneNumber: String
  pictureUrl: String
}

type User {
  age: String!
  attentionStatement: String!
  bio: String
  country: String!

  """Identifies the date and time when the object was created."""
  createdAt: DateTime!
  email: String!
  firstname: String
  id: ID!
  issueCategory: String!
  issueType: String!
  lastname: String
  phoneNumber: String!
  pictureUrl: String!
  posts: [Post!]!
  role: Role!

  """Identifies the date and time when the object was last updated."""
  updatedAt: DateTime!
}
