//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  role Role [not null, default: 'FELLOW']
  bio String
  attentionStatement String
  issueType String
  issueCategory String
  country String
  phoneNumber String
  age String
  pictureUrl String
  posts Post [not null]
  appointments Appointment [not null]
  availabilities Availability [not null]
  events Event [not null]
  attendee EventAttendee [not null]
  MessageThreads MessageThread [not null]
}

Table Appointment {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  status AppointMentStatus [not null, default: 'PENDING']
  startDate DateTime [not null]
  endDate DateTime [not null]
  user User
  userId Int
  guestId Int [not null]
  guestAvailability Availability
  guestAvailabilityId Int
  about String [not null]
}

Table Availability {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  active Boolean [not null]
  available Boolean [not null]
  startTimeDate DateTime [not null]
  endTimeDate DateTime [not null]
  user User
  userId Int
  appointments Appointment [not null]
}

Table Event {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  purpose String [not null]
  meetingLink String [not null]
  completed Boolean [not null]
  startDateTime DateTime [not null]
  endDateTime DateTime [not null]
  host User
  hostId Int
  attendees EventAttendee [not null]
}

Table EventAttendee {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User
  userId Int
  event Event
  eventId Int
}

Table MessageThread {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  creator User
  creatorId Int
  guestId Int [not null]
  messages Message [not null]
}

Table Message {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  content String [not null]
  toUserId Int [not null]
  fromUserId Int [not null]
  thread MessageThread
  threadId Int [not null]
}

Table Post {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  author User
  authorId Int
}

Enum Role {
  ADMIN
  FELLOW
  COACH
}

Enum AppointMentStatus {
  ACCEPTED
  PENDING
  COMPLETED
  CANCELED
}

Ref: Appointment.userId > User.id

Ref: Appointment.guestAvailabilityId > Availability.id

Ref: Availability.userId > User.id

Ref: Event.hostId > User.id

Ref: EventAttendee.userId > User.id

Ref: EventAttendee.eventId > Event.id

Ref: MessageThread.creatorId > User.id

Ref: Message.threadId > MessageThread.id

Ref: Post.authorId > User.id